# blobnom

./: .gitignore  README.md  introduction-en.md
backend/: main.py  models.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 00b274b04fe9_add_minrating_maxrating_to_contest.py  0dbeac95a89d_add_practiceset_difficulty_desc.py  103b457921ee_add_mission_difficulty.py  1b10836df245_add_unsolvable_missions_next_solve_.py  298cb2dc738e_.py  4337a4bb413a_problem_id_to_string.py  550dd1d22f9d_add_last_solved_at_in_room.py  620202f31662_add_platform_to_user_room.py  6fb5c4fd4ecc_alter_owner_from_user_to_member.py  774b95b69fc6_modetype_rename_to_practice_linear.py  7e744707bac4_add_is_deleted_to_practiceset.py  9c5f28997f0a_fix_relation.py  9e331ef47617_add_member_performance.py  a2268f195cf7_add_boardtype_to_room.py  a870a68c2f20_add_unfreeze_offset_minutes.py  b2739afedac4_.py  b74cb7821071_initial_migration.py  bea406deb1c6_.py  ca6154415556_add_member_rating_etc.py  dae510910c91_added_practice.py  dffba8b9cac0_add_contest_desc.py  e3c1087c2b0b_add_contest_is_started_is_ended_room_is_.py  fc963b759e33_add_solved_mission_count_to_user.py
backend/src/: database.py  main.py
backend/src/api/: member_router.py  misc_router.py  room_router.py  router.py  websocket_router.py
backend/src/app/: main.py
backend/src/core/: config.py  constants.py  enums.py  models.py  router.py  router_ws.py  schemas.py  services.py  utils.py
backend/src/corev2/: constants.py  router.py  utils.py
backend/src/models/: models.py
(+226 files in other folders)
